--- a/src/modules/layout/hero/hero.component.html
+++ b/src/modules/layout/hero/hero.component.html
@@ -6,21 +6,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../../../assets/bayerisch-eisenstein-zelezna-ruda-alzbein-grenzort-zu-tschechien-ortsmitte-katholische-kirche-2bw374h.jpg" class="d-block w-100 h-50" alt="...">
+      <img src="../../../assets/Barreal,_Calingasta,_San_Juan.jpg" class="d-block w-100 h-50" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="../../../assets/Barreal.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="../../../assets/Pampa_del_Leoncito_en_San_Juan.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
