--- a/src/modules/layout/footer/footer.component.css
+++ b/src/modules/layout/footer/footer.component.css
@@ -3,6 +3,6 @@
     width: 100vw;
     background-color: black;
     padding: 40px;
-    
-    position:absolute;
+    bottom:0px;
+    /* position:absolute; */
 }
