--- a/src/modules/layout/header/header.component.html
+++ b/src/modules/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark ">
+<nav class="navbar navbar-expand-lg header">
     <div class="container-fluid ">
         <a class="navbar-brand" href="#">Unser Haus</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
