--- a/src/modules/layout/hero/hero.component.css
+++ b/src/modules/layout/hero/hero.component.css
@@ -9,9 +9,10 @@
 .image {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 .heroCarousel{
+    margin:5%;
     width: 50%;
 }
