--- a/src/modules/layout/hero/hero.component.css
+++ b/src/modules/layout/hero/hero.component.css
@@ -9,10 +9,14 @@
 .image {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    /* object-fit: contain; */
 }
 
 .heroCarousel{
     margin:5%;
-    width: 50%;
+    width: 80%;
+}
+
+.containerCarousel{
+    height: 100%;
 }
