--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <div class="grid">
-    <div class="row border header">
+    <div class="row header">
         <div class="col">
             <app-header></app-header>
         </div>
     </div>
-    <div class="row border content">
+    <div class="row content align-content-center">
         <div class="col">
             <router-outlet></router-outlet>
         </div>
     </div>
-    <div class="row border footer">
+    <div class="row footer">
         <div class="col">
             <app-footer></app-footer>
         </div>
