--- a/src/modules/layout/hero/hero.component.html
+++ b/src/modules/layout/hero/hero.component.html
@@ -1,5 +1,5 @@
 <div class="bg-dark">
-  <div class="container-fluid bg-dark d-flex justify-content-center containerCarousel">
+  <div class="container-fluid bg-dark d-flex justify-content-center">
     <div id="carouselExampleCaptions" class="carousel slide carousel-responsive heroCarousel" data-bs-ride="false">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
