--- a/src/modules/layout/footer/footer.component.css
+++ b/src/modules/layout/footer/footer.component.css
@@ -1,7 +1,5 @@
 .footer{
-    height: auto;
-    width: 100vw;
+    width: 100%;
     background-color: black;
     padding: 40px;
-    bottom:0px;
 }
