--- a/src/modules/layout/hero/hero.component.html
+++ b/src/modules/layout/hero/hero.component.html
@@ -43,15 +43,20 @@
     </div>
   
   </div>
-  <div class="d-flex justify-content-center">
-    <div class="card mb-4" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div *ngFor="let item of cardData" class="col-lg-4 col-md-4 col-sm-12 col-xs-12 d-flex justify-content-center">
+        
+          <div  class="card mb-4" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">{{item.name}}</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+    </div>
     </div>
   </div>
 </div>
